syntax = "proto3";

option java_package = "org.spin.proto.mobile.user";
option java_multiple_files = true;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

package user;

message GetCheckinStatusResponse {
	bool result = 1;
	string message = 2;
	CheckinData data = 5;
}

message CheckinData {
	bool checkin = 1;
	bool checkout = 2;
	string in_time = 3;
	string out_time = 4;
	string stay_time = 5;
}

message GetCheckinStatusRequest {
	int32 user_id = 1;
}

message SetMessageTokenRequest {
	int32 user_id = 1;
	string device_name = 2;
	string firebase_token = 3;
}

message SetMessageTokenResponse {
	bool result = 1;
	string message = 2;
}

service UserService {
	rpc GetCheckinStatus(GetCheckinStatusRequest) returns (GetCheckinStatusResponse) {
		option (google.api.http) = {
			post: "/user/attendance/get-checkin-checkout-status"
		};
	}
	
	rpc SetMessageToken(SetMessageTokenRequest) returns (SetMessageTokenResponse) {
		option (google.api.http) = {
			post: "/user/firebase-token"
		};
	}
}
